-------------------------------------------------------------------------------------------------------
Release notes version 1.8.1_beta : Enhancements, modifications and corrected bugs since version 1.8.0 :
-------------------------------------------------------------------------------------------------------
01/04/20 (TRUST)  Tools       : VisIt updated to 3.1.1 version for recent Linux (Fedora 27-30, Ubuntu 18, Debian 9-10)
01/04/20 (TRUST)  Tools       : Update PETSc to 3.12.2 version + fix build with OpenMPI 4.x + add ML the multilevel preconditionning package from Trilinos
09/03/20 (TRUST)  Keyword     : Conduction_milieu_variable becomes obsolete and Conduction keyword can be used for conduction equation with non-uniform Rho*Cp 
25/02/20 (TRUST)  Bug fixed   : Total pressure in VEF Quasi-Compressible model was not computed correctly
21/02/20 (TRUST)  Bug fixed   : Rewrite Champ_Fonc_MED class for a faster Champ_Fonc_MED_tabule keyword (read of several time steps in a MED file for field time-tabulation)
29/01/20 (TRUST)  New feature : New option thermique_monolithique (VDF only) for Scheme_Euler_Implicit keyword to enable full thermal impliciting for coupled problems (single matrix solved)
23/01/20 (Tools)  New feature : Add merge_meds.py python script to merge MED files in parallel into single one
21/01/20 (TRUST)  Output      : Change of .son file format (header, column alignment, precision_impr by default 8 and not 3 as before) + add gnuplot_header option to have a gnuplot5 compatible header
07/01/20 (TRUST)  Tools       : Trust Wizard tool becomes obsolete
07/01/20 (TRUST)  Tools       : MED-file 4.0.0 insures direct compatibility with Salome 9.2
07/01/20 (TRUST)  Tools       : Update versions for MEDCoupling (9.4.0), MED-file (4.0.0), HDF (1.10.3), Gmsh (4.4.1)
07/01/20 (TRUST)  Tools       : Switch to Python 3. Python 2 scripts are not supported anymore